--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile:scss": "node-sass ./src/styles/timeline.scss ./src/styles/timeline.css -w"
+    "compile:scss": "node-sass ./src/styles/checkbox.scss ./src/styles/checkbox.css -w",
+    "compile:main": "node-sass ./src/styles/mainPage.scss ./src/styles/mainPage.css -w"
   },
   "eslintConfig": {
     "extends": [
